# termstack

./: BENCHMARK_BASELINE.md  Cargo.toml  FINAL_SUMMARY.md  LICENSE  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  README.md  benchmark_baseline_filtering.txt
.claude/commands/: termstack.md
.claude/skills/termstack-yaml-generator/: SKILL.md
.claude/skills/termstack-yaml-generator/examples/: dog-api.yaml  kubernetes-cli.yaml
.github/workflows/: ci.yml  release.yml
assets/: claude-skill-demo-v2.cast  claude-skill-demo.cast
benches/: filtering.rs  rendering.rs  search.rs  templates.rs
docs/: README.md  SPECIFICATION.md
docs/cookbook/: aws-cli.md  github-api.md
docs/guides/: authentication.md  templates-and-context.md
examples/: dog-api.yaml  kubernetes-cli.yaml  kubernetes.yaml  simple.yaml  stream-test.yaml  style-test.yaml
src/: app.rs  error.rs  globals.rs  lib.rs  main.rs
src/action/: builtins.rs  executor.rs  mod.rs
src/adapters/: cli.rs  http.rs  mod.rs  registry.rs  script.rs
src/app/: mod.rs  types.rs
src/config/: defaults.rs  loader.rs  mod.rs  schema.rs  validator.rs
src/data/: cache.rs  cli.rs  http.rs  jsonpath.rs  mod.rs  provider.rs  stream.rs
src/input/: command.rs  handler.rs  mod.rs  search.rs
src/navigation/: context.rs  mod.rs  router.rs  stack.rs
src/template/: engine.rs  filters.rs  mod.rs
src/ui/: breadcrumb.rs  layout.rs  loading.rs  mod.rs  statusbar.rs  theme.rs  toast.rs
src/util/: mod.rs
src/view/: detail.rs  help.rs  mod.rs  renderer.rs  table.rs  yaml.rs
