[package]
name = "termstack"
version = "0.0.0-dev"
description = "A generic TUI framework for building rich, navigable dashboards using simple YAML — no UI coding required."
authors = ["pa <pramodh.ayyappan@hotmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
# TUI Framework
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
unicode-width = "0.2"

# Async Runtime (optimized - only needed features)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "io-util", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Data & Templates
tera = "1.20"
serde_json_path = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = "0.4"
humantime = "2"
humansize = "2"
tui-input = "0.10"
regex = "1"
ansi-to-tui = "7"

# Syntax highlighting
tui-syntax-highlight = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "filtering"
harness = false

[[bench]]
name = "templates"
harness = false

[[bench]]
name = "search"
harness = false

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = 3        # Maximum performance (changed from "s" for size)
strip = true
panic = "abort"      # Smaller binary, faster panics
